# ha_tagado

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
tagado_service/src/apps/data_service/: Dockerfile  README.md  pyproject.toml
tagado_service/src/apps/data_service/app/: data_collector.py  data_service.py  mongo_service.py
tagado_service/src/apps/web_service/: Dockerfile  README.md  pyproject.toml
tagado_service/src/apps/web_service/app/: mongo_service.py  web_service.py
tagado_service/src/utils/: pyproject.toml
